// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Tabs base demo works fine 1`] = `
<base>
  <t-tabs
    defaultValue="{{0}}"
    tClass="custom-tabs"
    bind:change="onTabsChange"
    bind:click="onTabsClick"
  >
    <t-tab-panel
      label="选项"
      value="0"
    />
    <t-tab-panel
      label="选项"
      value="1"
    />
  </t-tabs>
  <t-tabs
    defaultValue="{{0}}"
    tClass="custom-tabs"
    bind:change="onTabsChange"
    bind:click="onTabsClick"
  >
    <t-tab-panel
      label="选项"
      value="0"
    />
    <t-tab-panel
      label="选项"
      value="1"
    />
    <t-tab-panel
      label="上限六个文字"
      value="2"
    />
  </t-tabs>
  <t-tabs
    defaultValue="{{0}}"
    tClass="custom-tabs"
    bind:change="onTabsChange"
    bind:click="onTabsClick"
  >
    <t-tab-panel
      label="选项"
      value="0"
    />
    <t-tab-panel
      label="选项"
      value="1"
    />
    <t-tab-panel
      label="选项"
      value="2"
    />
    <t-tab-panel
      label="上限四字"
      value="3"
    />
  </t-tabs>
  <t-tabs
    defaultValue="{{0}}"
    sticky="{{true}}"
    stickyProps="{{
      Object {
        "zIndex": 2,
      }
    }}"
    tClass="custom-tabs"
    bind:change="onTabsChange"
    bind:click="onTabsClick"
    bind:scroll="onStickyScroll"
  >
    <t-tab-panel
      label="选项"
      value="0"
    />
    <t-tab-panel
      label="选项"
      value="1"
    />
    <t-tab-panel
      label="选项"
      value="2"
    />
    <t-tab-panel
      label="选项"
      value="3"
    />
    <t-tab-panel
      label="上限三字"
      value="4"
    />
  </t-tabs>
</base>
`;

exports[`Tabs Tabs scroll demo works fine 1`] = `
<scroll>
  <t-tabs
    defaultValue="{{0}}"
    spaceEvenly="{{false}}"
    bind:change="onTabsChange"
    bind:click="onTabsClick"
  >
    <t-tab-panel
      label="选项"
      value="{{0}}"
    />
    <t-tab-panel
      label="选项"
      value="{{1}}"
    />
    <t-tab-panel
      label="选项"
      value="{{2}}"
    />
    <t-tab-panel
      label="选项"
      value="{{3}}"
    />
    <t-tab-panel
      label="选项"
      value="{{4}}"
    />
    <t-tab-panel
      label="选项"
      value="{{5}}"
    />
    <t-tab-panel
      label="选项"
      value="{{6}}"
    />
    <t-tab-panel
      label="选项"
      value="{{7}}"
    />
  </t-tabs>
</scroll>
`;

exports[`Tabs Tabs size demo works fine 1`] = `
<size>
  <t-tabs
    defaultValue="{{0}}"
  >
    <t-tab-panel
      label="小尺寸"
      value="0"
    />
    <t-tab-panel
      label="选项"
      value="1"
    />
    <t-tab-panel
      label="选项"
      value="2"
    />
    <t-tab-panel
      label="选项"
      value="3"
    />
  </t-tabs>
  <wx-view
    style="height: 16px"
  />
  <t-tabs
    class="bigger"
    defaultValue="{{0}}"
  >
    <t-tab-panel
      label="大尺寸"
      value="0"
    />
    <t-tab-panel
      label="选项"
      value="1"
    />
    <t-tab-panel
      label="选项"
      value="2"
    />
    <t-tab-panel
      label="选项"
      value="3"
    />
  </t-tabs>
</size>
`;

exports[`Tabs Tabs status demo works fine 1`] = `
<status>
  <t-tabs
    value="0"
    bind:change="onTabsChange"
    bind:click="onTabsClick"
  >
    <t-tab-panel
      label="选中"
      value="0"
    />
    <t-tab-panel
      label="默认"
      value="1"
    />
    <t-tab-panel
      disabled="{{true}}"
      label="禁用"
      value="2"
    />
  </t-tabs>
</status>
`;

exports[`Tabs Tabs theme demo works fine 1`] = `
<theme>
  <t-tabs
    defaultValue="{{0}}"
    theme="tag"
  >
    <t-tab-panel
      label="选项"
      value="{{0}}"
    />
    <t-tab-panel
      label="选项"
      value="{{1}}"
    />
    <t-tab-panel
      label="选项"
      value="{{2}}"
    />
    <t-tab-panel
      label="选项"
      value="{{3}}"
    />
  </t-tabs>
  <wx-view
    style="height: 16px"
  />
  <t-tabs
    defaultValue="{{0}}"
    spaceEvenly="{{false}}"
    theme="tag"
  >
    <t-tab-panel
      label="选项"
      value="{{0}}"
    />
    <t-tab-panel
      label="选项"
      value="{{1}}"
    />
    <t-tab-panel
      label="选项"
      value="{{2}}"
    />
    <t-tab-panel
      label="选项"
      value="{{3}}"
    />
    <t-tab-panel
      label="选项"
      value="{{4}}"
    />
    <t-tab-panel
      label="选项"
      value="{{5}}"
    />
    <t-tab-panel
      label="选项"
      value="{{6}}"
    />
    <t-tab-panel
      label="选项"
      value="{{7}}"
    />
  </t-tabs>
  <wx-view
    style="height: 16px"
  />
  <t-tabs
    defaultValue="{{0}}"
    theme="card"
  >
    <t-tab-panel
      label="选项"
      value="{{0}}"
    />
    <t-tab-panel
      label="选项"
      value="{{1}}"
    />
    <t-tab-panel
      label="选项"
      value="{{2}}"
    />
    <t-tab-panel
      label="选项"
      value="{{3}}"
    />
  </t-tabs>
  <wx-view
    style="height: 16px"
  />
  <t-tabs
    defaultValue="{{0}}"
    spaceEvenly="{{false}}"
    theme="card"
  >
    <t-tab-panel
      label="选项"
      value="{{0}}"
    />
    <t-tab-panel
      label="选项"
      value="{{1}}"
    />
    <t-tab-panel
      label="选项"
      value="{{2}}"
    />
    <t-tab-panel
      label="选项"
      value="{{3}}"
    />
    <t-tab-panel
      label="选项"
      value="{{4}}"
    />
    <t-tab-panel
      label="选项"
      value="{{5}}"
    />
    <t-tab-panel
      label="选项"
      value="{{6}}"
    />
    <t-tab-panel
      label="选项"
      value="{{7}}"
    />
  </t-tabs>
</theme>
`;

exports[`Tabs Tabs with-badge demo works fine 1`] = `
<with-badge>
  <t-tabs
    defaultValue="{{0}}"
  >
    <t-tab-panel
      badgeProps="{{
        Object {
          "dot": true,
          "offset": Array [
            "4px",
            "4px",
          ],
        }
      }}"
      label="选项"
      value="0"
    />
    <t-tab-panel
      badgeProps="{{
        Object {
          "count": 8,
          "offset": Array [
            "8px",
            "8px",
          ],
        }
      }}"
      label="选项"
      value="1"
    />
    <t-tab-panel
      label="选项"
      value="2"
    />
  </t-tabs>
</with-badge>
`;

exports[`Tabs Tabs with-content demo works fine 1`] = `
<with-content>
  <t-tabs
    defaultValue="{{0}}"
    tClass="custom-tabs"
    tClassContent="custom-panel"
    bind:change="onTabsChange"
    bind:click="onTabsClick"
  >
    <t-tab-panel
      label="选项一"
      style="display:flex;justify-content:center;align-items:center;"
      value="0"
    >
      选项一内容
    </t-tab-panel>
    <t-tab-panel
      label="选项二"
      style="display:flex;justify-content:center;align-items:center;"
      value="1"
    >
      选项二内容
    </t-tab-panel>
    <t-tab-panel
      label="选项三"
      style="display:flex;justify-content:center;align-items:center;"
      value="2"
    >
      选项三内容
    </t-tab-panel>
    <t-tab-panel
      label="选项四"
      style="display:flex;justify-content:center;align-items:center;"
      value="3"
    >
      选项四内容
    </t-tab-panel>
  </t-tabs>
</with-content>
`;

exports[`Tabs Tabs with-icon demo works fine 1`] = `
<with-icon>
  <t-tabs
    defaultValue="{{0}}"
  >
    <t-tab-panel
      icon="app"
      label="选项"
      value="{{0}}"
    />
    <t-tab-panel
      icon="app"
      label="选项"
      value="{{1}}"
    />
    <t-tab-panel
      icon="app"
      label="选项"
      value="{{2}}"
    />
  </t-tabs>
</with-icon>
`;
